fix layout issue on collab display in profile page

--- a/src/styles/Display.scss
+++ b/src/styles/Display.scss
@@ -137,6 +137,7 @@
     border-radius: 20px;
     overflow: hidden;
     margin-bottom: $component-margin;
+    background: $white-background-color;
   }
   &__portfoliotext {
     background: $white-background-color;
